@@ -1,3 +1,7 @@
+2004-12-17 Bart Hakvoort  <gparted@users.sf.net>
+
+	* src/GParted_Core.cc: Only peform partable re-read check if at least one partition on a device is mounted.
+
 2004-12-15 Bart Hakvoort  <gparted@users.sf.net>
 
 	* some minor internal codechanges, which should save a few bytes of mem here and there.
